# pyproject.toml

[build-system]
requires = ["setuptools", "setuptools-scm"]
build-backend = "setuptools.build_meta"

[project]
name = "ripple_down_rules_meta"
dynamic = ["version", "dependencies", "optional-dependencies"]
description = "Acts as a meta Ripple Down Rules (RDR) that Improves the original Ripple Down Rules."
readme = "README.md"
authors = [{ name = "Abdelrhman Bassiouny", email = "abassiou@uni-bremen.de" }]
license = { file = "LICENSE" }
classifiers = [
    "Programming Language :: Python :: 3",
]
keywords = ["robotics", "knowledge", "reasoning", "representation"]

[project.urls]
Homepage = "https://github.com/AbdelrhmanBassiouny/ripple_down_rules_meta"

[tool.setuptools.packages.find]
where = ["src"]
include = ["ripple_down_rules_meta*"]

[tool.setuptools.dynamic]
version = {attr = "ripple_down_rules_meta.__version__"}